--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           <div class="item1">
             <button onclick="startgame()" class='start-btn'> START</button> 
             <button onclick="resetgame()" class='start-btn'> RESET </button>
+            <button onclick="skipgame()" class='start-btn'> SKIP </button>
 
           </div>
           <div class="item2">
@@ -40,6 +41,7 @@
             <button onclick="resetlevel(this.value)" class='video-game-button' value="1" >1</button>
             <button onclick="resetlevel(this.value)" class='video-game-button' value="2"> 2</button>
             <button onclick="resetlevel(this.value)" class='video-game-button' value="3"> 3</button>
+            <button onclick="resetlevel(this.value)" class='video-game-button' value="4"> 4</button>
           </div>
          </div>
         
